@@ -1,4 +1,1 @@
---enable-native-access=ALL-UNNAMED
---sun-misc-unsafe-memory-access=allow
 --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
---enable-final-field-mutation=ALL-UNNAMED
